--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Discord bot",
   "main": "index.js",
   "scripts": {
-    "bot": "nodemen ./index.js"
+    "bot": "nodemon ./index.js"
   },
   "author": "",
   "license": "ISC",
