--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "bot": "nodemon ./index.js"
   },
-  "author": "",
+  "author": "Eredin#2903 & Angelo#1337",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.4.2",
-    "node-opus": "^0.3.1",
-    "giphy-api": "^2.0.1"
+    "giphy-api": "^2.0.1",
+    "mongodb": "^3.2.3",
+    "node-opus": "^0.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.6"
